# autora-test-package

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
src/autora/theorist/challenge_test_project/: __init__.py
tests/: test_challenge_test_project.py
